# trabalho-final-mo444

./: .gitignore  README.md  check_torch.py  face_extract.py  main.py  model.py  process_data.py  pyproject.toml  requirements.txt  train_model.py  train_val_loader.py  utils.py
